--- a/components/layouts/MainLayout.module.css
+++ b/components/layouts/MainLayout.module.css
@@ -1,7 +1,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
@@ -23,6 +23,15 @@
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
+
+}
+
+.description Link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  
 }
 
 .description p {
@@ -210,6 +219,7 @@
   .description a {
     padding: 1rem;
   }
+
 
   .description p,
   .description div {
